# notero-reverse-sync

./: .env.example  .gitignore  README.md  pyproject.toml
src/notero_sync/: bootstrap.py  config.py  main.py
src/notero_sync/db/: models.py  repository.py
src/notero_sync/notion/: block_parser.py  client.py  property_parser.py
src/notero_sync/sync/: collection_resolver.py  engine.py  field_map.py  note_sync.py  tag_merger.py
src/notero_sync/utils/: zotero_uri.py
src/notero_sync/webhook/: handler.py  models.py
src/notero_sync/zotero/: client.py
tests/: test_block_parser.py  test_note_sync.py  test_sync_engine.py  test_tag_merger.py  test_zotero_uri_parser.py
zotero-plugin/: bootstrap.js  build.sh  manifest.json  notero-reverse-sync.xpi  prefs.js
zotero-plugin/content/: preferences.xhtml
zotero-plugin/locale/en-US/: notero-reverse-sync.ftl
zotero-plugin/modules/: bootstrap-runner.js  collection-resolver.js  field-map.js  logger.js  note-sync-engine.js  notero-reverse-sync.js  notion-block-parser.js  notion-client.js  notion-property-parser.js  polling-scheduler.js  sync-engine.js  sync-state-store.js  tag-merger.js  zotero-item-bridge.js  zotero-uri-parser.js
