[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notero-sync"
version = "0.1.0"
description = "Reverse sync from Notion to Zotero group libraries"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.21,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-httpx>=0.35,<1",
    "ruff>=0.9,<1",
]

[project.scripts]
notero-bootstrap = "notero_sync.bootstrap:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
